Woops. Fixed Spacing

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -7,9 +7,9 @@
     th,
     td {
         min-width: 120px;
-        padding-top: $sp-0;
+        padding-top: 0;
         padding-right: $sp-3;
-        padding-bottom: $sp-0;
+        padding-bottom: 0;
         padding-left: $sp-3;
         background-color: #E2EFD9;
 //        border-bottom: $border #538135;
@@ -30,7 +30,7 @@
             }
       
             td {
-              padding-bottom: $sp-1;
+              padding-bottom: 0;
             }
           }
         }
